# embedded-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  ZMQ_CONFIGURABLE_ENDPOINTS.md  ZMQ_IMPROVEMENTS.md  compile_commands.json  docker-compose.yml  pyproject.toml  std_expected_monadic_analysis.md
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: README.md
.github/workflows/: ci.yml
cmake/: find_compiler.cmake  python_venv.cmake
cmake/toolchain/: armgcc-cm4.cmake  armgcc-cm7.cmake  armgcc.cmake  host-clang.cmake
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
py/: CMakeLists.txt
py/host-emulator/: CMakeLists.txt  blinky  pyproject.toml  requirements.txt
py/host-emulator/host_emulator/: emulator.py
py/host-emulator/src/: common.py  emulator.py  pin.py  uart.py
py/host-emulator/src/host_emulator/: __init__.py  common.py  emulator.py  i2c.py  pin.py  uart.py
py/host-emulator/tests/: conftest.py  test_blinky.py  test_i2c_demo.py  test_i2c_test.py  test_uart_echo.py
src/: .clang-format  .clang-tidy  CMakeLists.txt
src/apps/: CMakeLists.txt  app.hpp
src/apps/blinky/: CMakeLists.txt  blinky.cpp  blinky.hpp
src/apps/i2c_demo/: CMakeLists.txt  i2c_demo.cpp  i2c_demo.hpp
src/apps/i2c_test/: CMakeLists.txt  i2c_test.cpp  i2c_test.hpp
src/apps/uart_echo/: CMakeLists.txt  uart_echo.cpp  uart_echo.hpp
src/libs/: CMakeLists.txt
src/libs/board/: CMakeLists.txt  board.hpp
src/libs/board/host/: CMakeLists.txt  host_board.cpp  host_board.hpp  main.cpp
src/libs/board/stm32f3_discovery/: CMakeLists.txt  newlib_nano.c  syscalls.c
src/libs/common/: CMakeLists.txt  error.hpp  logger.cpp  logger.hpp
src/libs/mcu/: CMakeLists.txt  delay.hpp  i2c.hpp  pin.hpp  uart.hpp
src/libs/mcu/host/: CMakeLists.txt  delay.cpp  dispatcher.hpp  emulator_message_json_encoder.hpp  host_emulator_messages.hpp  host_i2c.cpp  host_i2c.hpp  host_pin.cpp  host_pin.hpp  host_uart.cpp  host_uart.hpp  message_dispatcher.hpp  message_receiver.hpp  receiver.hpp  test_dispatcher.cpp  test_host_i2c.cpp  test_host_uart.cpp  test_message_dispatcher.cpp  test_messages.cpp  test_zmq_transport.cpp  transport.hpp  zmq_transport.cpp  zmq_transport.hpp
test/: .clang-tidy  CMakeLists.txt  README.md
