[tool.poetry]
name = "host-emulator"
version = "0.1.0"
description = ""
authors = ["Nehal Patel <hereisnehal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzmq = "^25.1.1"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
