[tool.poetry]
name = "host-emulator"
version = "0.1.0"
description = ""
authors = ["Nehal Patel <hereisnehal@gmail.com>"]
readme = "README.md"
packages = [{include = "host_emulator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyzmq = "^25"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
